test/asm/string-literal-macro-arg.err
error: Illegal character escape 'w'
    at string-literal-macro-arg.asm(6)
error: Illegal character escape '\' at end of input
    at string-literal-macro-arg.asm(11)
error: Unterminated string
    at string-literal-macro-arg.asm(11)
error: Unterminated string
    at string-literal-macro-arg.asm::mac(4) <- string-literal-macro-arg.asm(11)
Assembly aborted with 4 errors!
